--- a/did-you-know/src/editor.scss
+++ b/did-you-know/src/editor.scss
@@ -1,16 +1,31 @@
 .did-you-know {
-	background: #f8f9ff;
-	border-radius: 1rem;
-	padding: 1.5rem;
-	font-family: 'Poppins', sans-serif;
-
-	&__title {
-		margin: 0 0 0.5rem;
-		font-weight: 600;
+    display: grid;
+    row-gap: 8px;
+    background: #F7F9FF;
+    border-radius: 26px;
+    padding: 1.5rem;
+    font-family: 'Poppins', sans-serif;
+	font-size: 1.25rem;
+	* {
+		margin: 0px;
+		color: #0B0B10;
 	}
 
-	&__content {
-		margin: 0;
-		font-size: 1rem;
+    &__title {
+		margin: 0px;
+		&-text {
+			display: flex;
+			gap: 5px;
+			font-weight: 600;
+		}
+    }
+
+	&__emoji {
+		line-height: 1.8rem;
 	}
+
+    p.did-you-know__content {
+		font-weight: 400;
+		color: #0B0B10;
+    }
 }
