Simple option page ready

--- a/did-you-know/src/editor.scss
+++ b/did-you-know/src/editor.scss
@@ -29,3 +29,12 @@
 		color: #0B0B10;
     }
 }
+
+/* Brand related styles */
+.brand-cardcorp .did-you-know {
+	 background: #F7F8FD;
+}
+
+.brand-billpro .did-you-know {
+	 background: #F7F9FF;
+}
