--- a/did-you-know/src/style.scss
+++ b/did-you-know/src/style.scss
@@ -1,7 +1,6 @@
 .did-you-know {
     display: grid;
     row-gap: 8px;
-    background: #F7F9FF;
     border-radius: 26px;
     padding: 24px;
     font-family: 'Poppins', sans-serif;
@@ -24,4 +23,14 @@
 		font-weight: 400;
 		color: #0B0B10;
     }
+}
+
+
+/* Brand related styles */
+.brand-cardcorp .did-you-know {
+	 background: #F7F8FD;
+}
+
+.brand-billpro .did-you-know {
+	 background: #F7F9FF;
 }
